src/msg-queue/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: http # used for management console to view messages in queue
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: amqp # used to push messages to the queue
      protocol: TCP
      port: 5672
      targetPort: 5672
